# zotero-cli-cc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/en/getting-started/: installation.md  quickstart.md  setup.md
docs/en/guide/: citations.md  collections.md  item-management.md  notes-tags.md  pdf.md  search.md  update-status.md  workspace.md
docs/en/mcp/: claude-code.md  setup.md  tools.md
docs/en/reference/: cli.md
docs/superpowers/plans/: 2026-03-20-zotero-cli-cc-implementation.md
docs/superpowers/specs/: 2026-03-20-zotero-cli-cc-design.md  2026-03-22-mcp-server-design.md
docs/zh/: changelog.md
docs/zh/getting-started/: installation.md  quickstart.md  setup.md
docs/zh/guide/: citations.md  collections.md  item-management.md  notes-tags.md  pdf.md  search.md  update-status.md  (+1 more)
skill/zotero-cli/: SKILL.md
skill/zotero-cli-cc/: SKILL.md
src/zotero_cli_cc/: __init__.py  cli.py  config.py  formatter.py  mcp_server.py  models.py
tests/: test_cli_config.py  test_cli_note.py  test_cli_p0.py  test_cli_p1.py  test_cli_p2.py  test_cli_p3.py  test_cli_stats_open.py  test_config.py  test_formatter.py  test_group_library.py  test_integration.py  test_mcp_server.py  test_models.py  test_new_features.py  test_pdf_cache.py  test_pdf_extractor.py  test_rag.py  test_reader.py  test_tier1_search.py  test_tier1_update.py  test_trash.py  test_update_status.py  test_workspace.py  test_workspace_rag.py  test_writer.py
tests/fixtures/: create_test_db.py  zotero.sqlite
(+37 files in other folders)
