[project]
name = "zotero-cli-cc"
version = "0.1.0"
description = "Zotero CLI for Claude Code — SQLite reads + Web API writes"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyzotero>=1.5",
    "pymupdf>=1.24",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
zot = "zotero_cli_cc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zotero_cli_cc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
